--- a/DesignStudio.BLL/DesignStudio.BLL.csproj
+++ b/DesignStudio.BLL/DesignStudio.BLL.csproj
@@ -1,6 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DesignStudio.DAL\DesignStudio.DAL.csproj" />
   </ItemGroup>
 
