--- a/DesignStudio.UI/DesignStudio.UI.csproj
+++ b/DesignStudio.UI/DesignStudio.UI.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
     <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
